<resources>
    <string name="app_name">Зинчук Анна</string>
    <string name="sun">Солнце</string>
    <string name="grass">Трава</string>
    <string name="sky">Небо</string>
    <string name="clock">Часы</string>
    <string name="hour">Стрелка</string>
    <string name="action_second">Второе окно</string>
    <string name="action_third">Третье окно</string>
    <string name="action_fourth">Четвертое окно</string>
</resources>