<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://shemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_second"
        android:orderInCategory="100"
        android:title="@string/action_second"
        app:showAsAction="never"
        android:onClick="onSecondMenuClick"/>

    <item
        android:id="@+id/action_third"
        android:orderInCategory="100"
        android:title="@string/action_third"
        app:showAsAction="never"
        android:onClick="onThirdMenuClick"/>

    <item
        android:id="@+id/action_fourth"
        android:orderInCategory="100"
        android:title="@string/action_fourth"
        app:showAsAction="never"
        android:onClick="onFourthMenuClick"/>
</menu>