<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:padding="0dp">

    <ImageView
        android:id="@+id/sky"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/sky"
        android:src="@drawable/sky"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sun"
        android:scaleType="fitCenter"
        android:src="@drawable/sun" />
    <ImageView
        android:id="@+id/grass"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/grass"
        android:src="@drawable/grass"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/clock"
        android:padding="10dp"
        android:src="@drawable/clock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/hour_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/clock"
        android:padding="10dp"
        android:src="@drawable/hour_hand"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>